add profile picture

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -21,6 +21,8 @@
     <th>Bookmark Image name</th>
     <th>Bookmark Image name desc</th>
     <th>Description</th>
+    <th>Like</th>
+
 
     <th></th>
     <th></th>
@@ -56,6 +58,8 @@
     <td><%= image_tag bookmark.image_name.url().to_s,width:50 , height:50 %></td>
     <td><%= image_tag bookmark.image_name_desc.url().to_s,width: 50, height:50 %></td>
     <td><%= bookmark.description %></td>
+    <td><%= bookmark.like %></td>
+
 
 
 
