--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -79,6 +79,10 @@
         <%= @bookmark.user_bookmark %>
     <%  end %>
 <%  end %>
+<p>
+  <b>Like:</b>
+  <%= @bookmark.like %>
+</p>
 
 
 </br>
