--- a/app/views/bundles/show.html.erb
+++ b/app/views/bundles/show.html.erb
@@ -1,10 +1,8 @@
 <p id="notice"><%= notice %></p>
-
 <p>
   <b>Id:</b>
   <%= @bundle.id %>
 </p>
-
 <p>
   <b>Name:</b>
   <%= @bundle.name %>
@@ -18,6 +16,40 @@
   <b>Active:</b>
   <%= @bundle.active %>
 </p>
+<p>
+  <b>Category:</b>
+  <%= @bundle.category %>
+</p>
+<p>
+  <b>Style:</b>
+  <%= @bundle.style %>
+</p>
+<p>
+  <b>Brand:</b>
+  <%= @bundle.brand %>
+</p>
+<p>
+  <b>Location:</b>
+  <%= @bundle.location %>
+</p>
+<p>
+  <b>Color:</b>
+  <%= @bundle.color %>
+</p>
+<p>
+  <b>Make:</b>
+  <%= @bundle.special_name %>
+</p>
+<p>
+  <b>Special Name:</b>
+  <%= @bundle.special_name %>
+</p>
+<p>
+  <b>Like:</b>
+  <%= @bundle.like %>
+</p>
+
+
 
 <p>
   <b>Theme:</b>
