--- a/app/views/items_designs/index.html.erb
+++ b/app/views/items_designs/index.html.erb
@@ -14,6 +14,15 @@
     <th>Item_Design Image name</th>
     <th>Item id</th>
     <th>Item Name</th>
+    <th>Category</th>
+    <th>Style</th>
+    <th>Brand</th>
+    <th>Color</th>
+    <th>Make</th>
+    <th>Special Name</th>
+    <th>Like</th>
+
+
 
     <th></th>
     <th></th>
@@ -35,6 +44,13 @@
         <td><%= items_design.item.name %></td>
 
     <%  end %>
+    <td><%= items_design.category %></td>
+    <td><%= items_design.style %></td>
+    <td><%= items_design.brand %></td>
+    <td><%= items_design.color %></td>
+    <td><%= items_design.make %></td>
+    <td><%= items_design.special_name %></td>
+    <td><%= items_design.like %></td>
 
 
 
