--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -70,8 +70,14 @@
           <%= f.label :user_bookmark %><br />
           <%= f.text_field :user_bookmark  %>
         </div>
+        <div class="field">
+          <%= f.label :like %><br />
+          <%= f.text_field :like  %>
+        </div>
 
-      <div class="actions">
+
+
+        <div class="actions">
         <%= f.submit %>
       </div>
     </div>
