--- a/app/views/bundles/_form.html.erb
+++ b/app/views/bundles/_form.html.erb
@@ -31,7 +31,46 @@
         <%= f.text_area :description %>
       </div>
 
-      <div class="field">
+        <div class="field">
+          <%= f.label :category %><br />
+          <%= f.text_field :category %>
+        </div>
+        <div class="field">
+          <%= f.label :style %><br />
+          <%= f.text_field :style %>
+        </div>
+
+        <div class="field">
+          <%= f.label :brand %><br />
+          <%= f.text_field :brand %>
+        </div>
+        <div class="field">
+          <%= f.label :location  %><br />
+          <%= f.text_field :location %>
+        </div>
+
+
+        <div class="field">
+          <%= f.label :color %><br />
+          <%= f.text_field :color %>
+        </div>
+
+        <div class="field">
+          <%= f.label :make %><br />
+          <%= f.text_field :make %>
+        </div>
+        <div class="field">
+          <%= f.label :special_name %><br />
+          <%= f.text_field :special_name %>
+        </div>
+
+        <div class="field">
+          <%= f.label :like %><br />
+          <%= f.text_field :like %>
+        </div>
+
+
+        <div class="field">
         <%= f.label :image_name %><br />
         <%= f.file_field  :image_name %>
       </div>
