--- a/app/views/items_designs/index.html.erb
+++ b/app/views/items_designs/index.html.erb
@@ -21,6 +21,8 @@
     <th>Make</th>
     <th>Special Name</th>
     <th>Like</th>
+    <th>Price</th>
+    <th>product_url</th>
 
 
 
@@ -51,6 +53,9 @@
     <td><%= items_design.make %></td>
     <td><%= items_design.special_name %></td>
     <td><%= items_design.like %></td>
+    <td><%= items_design.price %></td>
+    <td><%= items_design.product_url %></td>
+
 
 
 
