--- a/app/views/items_designs/show.html.erb
+++ b/app/views/items_designs/show.html.erb
@@ -43,10 +43,21 @@
   <b>Special Name:</b>
   <%= @items_design.special_name %>
 </p>
+
 <p>
   <b>Like:</b>
   <%= @items_design.like %>
 </p>
+
+<p>
+  <b>price:</b>
+  <%= @items_design.price %>
+</p>
+<p>
+  <b>product url:</b>
+  <%= @items_design.product_url %>
+</p>
+
 
 
 <p>
@@ -65,6 +76,7 @@
   <%= @items_design.image_name_selection %>
   <%= image_tag @items_design.image_name_selection.url.to_s %>
 </p>
+
 
 
 
