--- a/app/views/bundles/edit.html.erb
+++ b/app/views/bundles/edit.html.erb
@@ -67,7 +67,7 @@
         </div>
         <div class="field">
           <%= f.label :like %><br />
-          <%= f.text_field :like %>
+          <%= f.number_field :like %>
         </div>
         <div class="field">
           <%= f.label :image_name %><br />
