--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -71,7 +71,7 @@
         </div>
         <div class="field">
           <%= f.label :like %><br />
-          <%= f.text_field :like  %>
+          <%= f.number_field :like  %>
         </div>
 
 
