--- a/app/views/bundles/_form.html.erb
+++ b/app/views/bundles/_form.html.erb
@@ -66,7 +66,7 @@
 
         <div class="field">
           <%= f.label :like %><br />
-          <%= f.text_field :like %>
+          <%= f.number_field :like %>
         </div>
 
 
