Add Theme and Objects to Room
Added theme for user 23. Added Objects as well. however, there may be issues with objects showing in this merge.

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -2,7 +2,7 @@
 
 
 </div>
-        <% provide(:title, @user.name) %>
+        <% provide(:title, @user.username) %>
         <h1>This is My room on RoR TEST</h1>
 
         <div class="row">
