--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -88,10 +88,12 @@ p {
 /* footer */
 
 footer {
+  position:absolute;
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #999;
+  bottom:20px;
 }
 
 footer a {
@@ -124,6 +126,7 @@ footer ul li {
   width: 100%;
   margin-top: 45px;
   @include box_sizing;
+  display:none;
 }
 
 /* sidebar */
