--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,9 @@
                   <li>
                     <%= link_to "Sign out", signout_path, method: "delete" %>
                   </li>
+                  <li>
+                    <%= link_to "Backbone Profile" %>
+                  </li>
                 </ul>
               </li>
 
