--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -2,6 +2,7 @@
 
 
 </div>
+<div style="display:none;">
         <% provide(:title, @user.username) %>
         <h1>This is My room on RoR TEST</h1>
 
@@ -20,5 +21,6 @@
             </section>
           </aside>
         </div>
+</div>
 
 
