--- a/app/assets/stylesheets/users_profiles.css.scss
+++ b/app/assets/stylesheets/users_profiles.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the UsersProfiles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#users_profile_container{
+  overflow:hidden;
+  width:remainder;
+  line-height:1.5;
+  font-size:12px;
+  color:#5A5A5A;
+  background:#fff;
+  font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;
+  text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
+}
