--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,9 +36,12 @@
                   Admin <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
+                  <li><%= link_to "Shop", shop_index_path %></li>
+                  <li>-------------</li>
                   <li><%= link_to "Users", users_path %></li>
                   <li><%= link_to "Users Photos", users_photos_path %></li>
                   <li><%= link_to "Users Profile", users_profiles_path %></li>
+                  <li>-------------</li>
                   <li><%= link_to "Section", sections_path  %></li>
                   <li><%= link_to "Items", items_path  %></li>
                   <li><%= link_to "Location", locations_path  %></li>
