--- a/app/views/users_photos/index_users_photos_by_user_id.html.erb
+++ b/app/views/users_photos/index_users_photos_by_user_id.html.erb
@@ -1,12 +1,12 @@
+<div id="users_photos_container">
+
 <h1>Listing users_photos</h1>
 
 <%= link_to 'New Users photo', new_users_photos_by_user_id_path(@photos_user.id),method: :get  %>
 
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
+  <table border="3" bordercolor="#ededee" bgcolor="#ffffcc"  width="75%" cellspacing="2" cellpadding="3">
   <tr>
 
-
-    <th>Email</th>
     <th>Description</th>
     <th>Image name</th>
     <th>Profile image</th>
@@ -14,17 +14,10 @@
     <th></th>
     <th></th>
 
-
   </tr>
 
   <% @users_photos.each do |users_photo| %>
       <tr>
-        <%  if users_photo.user.nil? %>
-            <td></td>
-            <td></td>
-        <%  else %>
-            <td><%= users_photo.user.email %></td>
-        <%  end %>
 
         <td><%= users_photo.description %></td>
         <td><%= image_tag(users_photo.image_name.url().to_s,width: 100, height:100) %></td>
@@ -45,3 +38,5 @@
 </table>
 
 <br />
+
+</div>
