--- a/app/views/users_profiles/show_users_profiles_by_user_id.erb
+++ b/app/views/users_profiles/show_users_profiles_by_user_id.erb
@@ -1,3 +1,5 @@
+<div id="users_profile_container">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -53,3 +55,4 @@
 
 <li><%= link_to "Edit your profile image", index_users_photos_by_user_id_path(@users_photo.user_id) %></li>
 
+</div>
