--- a/app/assets/stylesheets/rooms.css.scss
+++ b/app/assets/stylesheets/rooms.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Rooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#current_background{
+  max-width:none;
+  position: absolute;
+  top:0;
+  left: 0;
+  z-index: -1;
+  ///*height: 100%;*/
+}
