--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -2,9 +2,10 @@
 
 
 </div>
-
+<div style="display:none;">
         <% provide(:title, @user.username) %>
-        <h1>This is My room on RoR</h1>
+        <h1>This is My room on RoR TEST</h1>
+
         <div class="row">
           <aside class="span4">
             <section>
@@ -16,9 +17,10 @@
               name: <%= @user.username %>,</br>
               email:  <%= @user.email %></br>
               username: <%= @user.username %></br>
-
+               themeID (we'll need them URL later):        <%= @user_theme.theme.image_name.to_s %></br>
             </section>
           </aside>
         </div>
+</div>
 
 
