--- a/app/assets/stylesheets/users_profiles.css.scss
+++ b/app/assets/stylesheets/users_profiles.css.scss
@@ -47,7 +47,7 @@
 	margin:0;
 	padding:0;
 }
-#profile_sidebar a,a:visited{
+#profile_sidebar a,#profile_sidebar a:visited{
 	text-decoration:none;
 	color:#f5f5f5;
 	
