--- a/app/assets/stylesheets/shop.css.scss
+++ b/app/assets/stylesheets/shop.css.scss
@@ -59,6 +59,22 @@
 }
 
 
+#shop_table table {
+
+  border: 2px solid #ededee ;
+  width: 100%;
+}
+
+#shop_table td {
+
+  border-spacing: 2px;
+  padding: 3px;
+  text-align: center;
+
+}
+
+//<table border="2" bordercolor="#ededee" bgcolor="#ffffcc"  width="100%" cellspacing="2" cellpadding="3">
+
 
 
 
