--- a/app/views/bundles_items_designs/index_items_design_selection.html.erb
+++ b/app/views/bundles_items_designs/index_items_design_selection.html.erb
@@ -3,7 +3,7 @@
 
 
 
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
+<table class="table table-bordered">
   <tr>
     <th>Id</th>
     <th>Name</th>
