--- a/app/views/bundles_items_designs/index_items_location_selection.html.erb
+++ b/app/views/bundles_items_designs/index_items_location_selection.html.erb
@@ -1,7 +1,7 @@
 <h1>Select items_locations</h1>
 
 
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="50%" cellspacing="2" cellpadding="3">
+<table class="table table-bordered">
   <tr>
     <th>Item id</th>
     <th>Item name</th>
