--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -3,7 +3,7 @@
 <h3>
   <%= link_to 'New Section', new_section_path %>
 </h3>
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="50%" cellspacing="2" cellpadding="3">
+<table class="table table-bordered">
   <tr>
     <th>Section Id</th>
     <th>Name</th>
