--- a/app/views/shop/shop_show_items_design.html.erb
+++ b/app/views/shop/shop_show_items_design.html.erb
@@ -18,22 +18,23 @@
 <div id="shop_container">
   <div id="shop_content_items">
 
-    <table border="2" bordercolor="#ededee" bgcolor="#ffffcc"  width="75%" cellspacing="2" cellpadding="3">
+    <div id="shop_table">
+          <table>
+          <% if @item_length > 0 %>
+          <% @items_designs_rand.in_groups_of(@item_length,false).each do |items_design_groups| %>
+              <tr>
+                <% items_design_groups.each do |items_design| %>
+                    <td >
+                      <%= link_to image_tag(items_design.image_name_selection.url().to_s,:width => 100, :height => 100),
+                                            shop_show_items_design_path(items_design.id), :method => :get %>
+                        </br><%= items_design.name %>
+                    </td>
 
-      <% if @item_length > 0 %>
-      <% @items_designs_rand.in_groups_of(@item_length,false).each do |items_design_groups| %>
-          <tr>
-            <% items_design_groups.each do |items_design| %>
-                <td align="center" >
-                  <%= link_to image_tag(items_design.image_name_selection.url().to_s,:width => 100, :height => 100),
-                                        shop_show_items_design_path(items_design.id), :method => :get %>
-                    </br><%= items_design.name %>
-                </td>
-
-            <% end %>
-          </tr>
-      <% end %>
-      <% end %>
-    </table>
+                <% end %>
+              </tr>
+          <% end %>
+          <% end %>
+        </table>
+    </div>
   </div>
 </div>
