--- a/app/views/users_photos/index.html.erb
+++ b/app/views/users_photos/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing users_photos</h1>
 
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
+<table class="table table-bordered">
   <tr>
     <th>id photo</th>
     <th>Username</th>
