--- a/app/views/users_photos/index_users_photos_by_user_id.html.erb
+++ b/app/views/users_photos/index_users_photos_by_user_id.html.erb
@@ -4,7 +4,7 @@
 
 <%= link_to 'New Users photo', new_users_photos_by_user_id_path(@photos_user.id),method: :get  %>
 
-  <table border="3" bordercolor="#ededee" bgcolor="#ffffcc"  width="75%" cellspacing="2" cellpadding="3">
+  <table class="table table-bordered">
   <tr>
 
     <th>Description</th>
