--- a/app/views/bundles_items_designs/index.html.erb
+++ b/app/views/bundles_items_designs/index.html.erb
@@ -9,7 +9,7 @@
 
 
 
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
+<table class="table table-bordered">
   <tr>
     <th>Bundle Items Design id</th>
     <th>Bundle id</th>
