--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,19 +1,17 @@
 <h1>Listing items</h1>
 
 <h3>
-  <%= link_to 'New Item', new_item_path %>
+  <%= link_to 'New Item', new_item_path,  class: "btn btn-primary" %>
 </h3>
 
-
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="50%" cellspacing="2" cellpadding="3">
+<table class="table table-bordered">
 
   <tr>
     <th>Item Id</th>
     <th>Name</th>
     <th>Clickable</th>
-    <th>image name</th>
-    <th>priority order</th>
-
+    <th>Image name</th>
+    <th>Priority order</th>
 
     <th></th>
     <th></th>
@@ -27,8 +25,8 @@
     <td><%= item.clickable %></td>
     <td><%= image_tag(item.image_name.url().to_s,width: 100, height:100) %></td>
     <td><%= item.priority_order %></td>
-    <td><%= link_to 'Show', item %></td>
-    <td><%= link_to 'Edit', edit_item_path(item) %></td>
+    <td><%= link_to 'Show', item  , class: "btn btn-primary" %> </td>
+    <td><%= link_to 'Edit', edit_item_path(item), class: "btn btn-primary" %></td>
   </tr>
 <% end %>
 </table>
