--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -3,7 +3,7 @@
 <h3>
     <%= link_to 'New Location', new_location_path %>
 </h3>
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="50%" cellspacing="2" cellpadding="3">
+<table class="table table-bordered">
   <tr>
     <th>id</th>
     <th>Name</th>
