--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,21 +1,23 @@
 <div id="shop_container1">
   <h4>Shop by category</h4>
 
-    <table border="2" bordercolor="#ededee" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
+  <div id="shop_table">
+      <table>
 
-      <% if @item_length > 0 %>
-      <% @items.in_groups_of(@item_length,false).each do |item_groups| %>
-          <tr>
-            <% item_groups.each do |item| %>
-            <td align="center">
-                <%= link_to image_tag(item.image_name.url().to_s, width: 200,height:200 ),  shop_path(item.id), :method => :get %>
-                </br><%= item.name %>
-            </td>
-            <% end %>
-          </tr>
-      <% end %>
-     <% end %>
-</table>
+          <% if @item_length > 0 %>
+          <% @items.in_groups_of(@item_length,false).each do |item_groups| %>
+              <tr>
+                <% item_groups.each do |item| %>
+                <td >
+                    <%= link_to image_tag(item.image_name.url().to_s, width: 200,height:200 ),  shop_path(item.id), :method => :get %>
+                    </br><%= item.name %>
+                </td>
+                <% end %>
+              </tr>
+          <% end %>
+         <% end %>
+        </table>
+  </div>
 
 </div>
 
