--- a/app/views/shop/show.html.erb
+++ b/app/views/shop/show.html.erb
@@ -46,25 +46,27 @@
       <%= @items_designs.first.item.name%>
     </h4>
 
-    <table border="2" bordercolor="#ededee" bgcolor="#ffffcc"  width="100%" cellspacing="2" cellpadding="3">
+    <div id="shop_table">
+        <table >
 
-      <% if @item_length > 0 %>
-          <%  @items_designs.in_groups_of(@item_length,false).each do |items_design_groups| %>
-              <tr>
-                <% items_design_groups.each do |items_design| %>
+          <% if @item_length > 0 %>
+              <%  @items_designs.in_groups_of(@item_length,false).each do |items_design_groups| %>
+                  <tr>
+                    <% items_design_groups.each do |items_design| %>
 
-                    <td align="center" >
-                      <%= link_to image_tag(items_design.image_name_selection.url().to_s,width: 200,height:200
-                                           ),
-                               shop_show_items_design_path(items_design.id), :method => :get %>
-                      </br><%= items_design.name %>
-                    </td>
+                        <td >
+                          <%= link_to image_tag(items_design.image_name_selection.url().to_s,width: 200,height:200
+                                               ),
+                                   shop_show_items_design_path(items_design.id), :method => :get %>
+                          </br><%= items_design.name %>
+                        </td>
 
+                  <% end %>
+                  </tr>
               <% end %>
-              </tr>
           <% end %>
-      <% end %>
-    </table>
+        </table>
+    </div>
 
   </div>
 </div>
