--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-primary" %>
 </div>
 
 <h1>Sign in</h1>
@@ -23,7 +23,7 @@
         <%= f.label :password %>
         <%= f.password_field :password %>
 
-        <%= f.submit "Sign in", class: "btn btn-large btn-primary" %>
+        <%= f.submit "Sign in", class: "btn btn-primary" %>
     <% end %>
 
     <!-- //NOTE: Problems with the JS login
@@ -61,7 +61,7 @@
         <%= f.password_field :password %>
 
 
-        <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+        <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
 
     <p><%= link_to "forgotten password?", new_password_reset_path %></p>
