--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -6,7 +6,7 @@
 
 
 
-<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
+<table class="table table-bordered">
   <tr>
     <th>Theme Id</th>
     <th>Name</th>
