--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,4 +60,12 @@ footer ul li {
     float: left;
     margin-left: 10px;
 }
-
+/*Apply class to img to flip picture horizontally.*/
+.flipimg{
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";
+}
