--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -73,6 +73,7 @@
 	height:100%;
 	width:720px;
 	position:relative;
+	transition:all 2s ease-in-out;
 	
 }
 
@@ -92,6 +93,8 @@
 	background: rgba(0,0,0,.8);
 	position:relative;/*for close button positioning*/
 	color: #f5f5f5;
+	/*left transition will turn left into negative width of profile_home_container */
+	transition:all 2s ease-in-out;
 
 }
 #profile_sidebar li{
