--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
                     <%= link_to "Sign out", signout_path, method: "delete" %>
                   </li>
                   <li>
-                    <%= link_to "Backbone Profile" %>
+                    <%= link_to_function 'Backbone Profile', 'testClick',id:"my-link"  %>
                   </li>
                 </ul>
               </li>
