--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -1,7 +1,6 @@
 <div id="xroom_main_container">
 
-           <!--xroom_theme_items-->
-  <div id="xroom_theme_items"> </div>
+  <div id="xroom_items"> </div>
   <div id="xroom_profile">     </div>
   <div id="xroom_editor">      </div>
 
