--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,26 +1,11 @@
-<div id="c" > Loading rooms... waiting for backbone :) ...
 
+<div id="xroom_main_container">
+  <div id="xroom">
+    <div id="xroom_items">   </div>
+    <div id="xroom_profile"> </div>
+    <div id="xroom_store">  </div>
+  </div>
 
-</div>
-<div style="display:none;">
-        <% provide(:title, @user.username) %>
-        <h1>This is My room on RoR TEST</h1>
-
-        <div class="row">
-          <aside class="span4">
-            <section>
-              <h1>
-                <%= @user.username %>
-              </h1>
-
-              name: <%= @user.id %>,</br>
-              name: <%= @user.username %>,</br>
-              email:  <%= @user.email %></br>
-              username: <%= @user.username %></br>
-               themeID (we'll need them URL later):        <%= @user_theme.theme.image_name.to_s %></br>
-            </section>
-          </aside>
-        </div>
 </div>
 
 
