--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -243,9 +243,12 @@ div.profile_info_name{
 #profile_home_wrapper table.generalGrid{
 	width:100%;
 }
-.gridItem img{
+.gridItemPicture {
 	width:180px;
 	height:180px;
+	background-size:contain;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
 }
 td.gridItem{
 	text-align:center;
