--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,9 +1,11 @@
 
 <div id="xroom_main_container">
   <div id="xroom">
-    <div id="xroom_items">   </div>
-    <div id="xroom_profile"> </div>
-    <div id="xroom_store">  </div>
+    <div id="xroom_header">   </div>
+    <div id="xroom_items">    </div>
+    <div id="xroom_profile">  </div>
+    <div id="xroom_store">    </div>
+    <div id="xroom_footer">   </div>
   </div>
 
 </div>
