add profile and setting log out

--- a/app/assets/stylesheets/users_photos.css.scss
+++ b/app/assets/stylesheets/users_photos.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-#users_photos_container{
+#old_users_photos_container{
   overflow:hidden;
   width:remainder;
   line-height:1.5;
