add bookmark view and store view

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -4,7 +4,8 @@
     <div id="xroom_header">   </div>
     <div id="xroom_items">    </div>
     <div id="xroom_profile">  </div>
-    <div id="xroom_store">    </div>
+    <div id="xroom_storepage">    </div>
+    <div id="xroom_bookmarks">    </div>
     <div id="xroom_footer">   </div>
   </div>
 
