--- a/app/assets/stylesheets/rooms_room_header.css.scss
+++ b/app/assets/stylesheets/rooms_room_header.css.scss
@@ -16,7 +16,7 @@
 
 }
 
-#xroom_header_store{
+#xroom_header_storepage{
   background-position: left;
   background-repeat: no-repeat;
   width: 23px;
@@ -25,7 +25,7 @@
 
 }
 
-#xroom_header_store:hover{
+#xroom_header_storepage:hover{
   width: 23px;
   height: 21px;
   background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125806/store-icon-hover.gif');
