Restyle tables to scroll. Restyle tables to have spacing. Move Activity Table header to a new template so that the border-spacing on the table doesn't affect the header. Also restyled social bar template to ignore border spacing since social bar view is only in the template

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -59,6 +59,7 @@ nav.profile {
 }
 #profile_home_wrapper td{
     width:200px;
+    background-color:white;
 }
 #profile_home_wrapper ul{
 	margin:0;
@@ -186,9 +187,10 @@ div.spacer{
 #profile_home_info_img img{
 	width:100px;
 	height:120px;
+	border:1px solid #919191
 }
 #profile_home_info_img img:hover{
-	border:2px solid #ffc000;
+	
 	/*float:left;
 	border:1px solid #AFAFAF;
 	width:100px;
@@ -219,6 +221,7 @@ div.spacer{
 
 #profile_home_basic_info ul li{
 	display:inline;
+	padding-right: 20px 
 }
 /* this refers to the bottom section of the profile container */
 #profileHome_bottom{
@@ -227,6 +230,7 @@ div.spacer{
 	margin: 0 1em;
 	height:400px;
 	overflow-y:auto;
+	overflow-x:hidden;
 
 }
 #info_username{
@@ -261,8 +265,15 @@ div.profile_info_name{
 	text-transform:uppercase;
 	width:100%
 }
-#profile_home_wrapper table.generalGrid{
+// #profile_home_wrapper 
+table.generalGrid{
 	width:100%;
+	background-color:#f5f5f5;
+	border-collapse:separate;
+	border-spacing:15px;
+}
+#profileHome_activity_header{
+	border-collapse:collapse;
 }
 .gridItemPicture {
 	width:180px;
@@ -273,6 +284,7 @@ div.profile_info_name{
 }
 td.gridItem{
 	text-align:center;
+	border:1px solid #ebebeb;
 }
 .gridItemDescription{
 	color:black;
