Style ProfileKeyRequestsView to look like mockups. Buttons do not work. Key Requests have a max-height, so there is no white space if there's only one or no key requests.

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -309,6 +309,7 @@ div.profile_friend_image_holder, .profile_request_single_image_holder,
 	 background-size:contain;
 	 background-repeat: no-repeat;
 	 background-position: 50% 50%;
+	 border:1px solid #e2e2e2;
 }
 .media.profile_friend{
 	color:black;
