--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -36,15 +36,17 @@
 
 /*End Profile Key Request Structure*/
 /*Profile Single Request and Single Suggestion CSS*/
-.profile_single_request .media{
+.profile_single_request .media, .profile_friend.media{
 	background-color:#f5f5f5;
 	border-bottom:1px solid #f4f4f4;
 }
-p.profile_request_name, p.profile_suggestion_name{
+p.profile_request_name, p.profile_suggestion_name,
+p.profile_friend_name{
 	color:#0073a5;
 	font-size: 16px;
 }
-p.profile_request_username, p.profile_suggestion_username{
+p.profile_request_username, p.profile_suggestion_username,
+p.profile_friend_username{
 	color:#898989;
 	font-size:12px;
 }
