--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -228,9 +228,9 @@ div.spacer{
 	clear:both;
 	background-color: #f5f5f5;
 	margin: 0 1em;
-	height:400px;
-	overflow-y:auto;
-	overflow-x:hidden;
+	// height:400px;
+	// overflow-y:auto;
+	// overflow-x:hidden;
 
 }
 #info_username{
@@ -270,10 +270,11 @@ table.generalGrid{
 	width:100%;
 	background-color:#f5f5f5;
 	border-collapse:separate;
-	border-spacing:15px;
+	border-spacing:10px;
 }
-#profileHome_activity_header{
+#profileHome_activity_header, .profileTableHeader{
 	border-collapse:collapse;
+	width:100%;
 }
 .gridItemPicture {
 	width:180px;
